fixed homepage dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,8 @@
 
   --color-brand-bg: var(--brand-bg);
   --color-brand-text: var(--brand-text);
-  --color-brand-blue: #155dfc;
+  --color-brand-blue: var(--brand-blue);
+  --color-brand-blue-2: var(--brand-blue-2);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -87,6 +88,8 @@
 
   --brand-bg: #ededed;
   --brand-text: #121212;
+  --brand-blue: #155dfc;
+  --brand-blue-2: #031038;
 }
 
 .dark {
@@ -123,7 +126,9 @@
   --sidebar-ring: oklch(0.556 0 0);
 
   --brand-bg: #030712;
-  --brand-text: #c2c2c2;
+  --brand-text: #d2d2d2;
+  --brand-blue: #155dfc;
+  --brand-blue-2: #202844;
 }
 
 @layer base {
